fix(chat): add refetch trigger with transition to avoid flicker

--- a/style/tailwind.css
+++ b/style/tailwind.css
@@ -3,7 +3,7 @@
 @import 'tailwindcss/utilities';
 
 html {
-    background-color: rgb(4, 16, 16)
+    background-color: rgb(1, 9, 9)
 }
 
 .translate_y_neg_4 {
